package com.cjj.designpattern.behavioral.chain;

/**
 * Created by chenjj on 2018/12/28
 */
public class Main {
    public static void main(String[] args){
        Support alice=new NoSupport("Alice");
        Support Bob=new LimitSupport("Bob",100);
        Support charlie =new SpecialSupport("Charlie",429);
        Support diana=new LimitSupport("Diana",200);
        Support elmo=new OddSupport("Elmo");
        Support fred=new LimitSupport("Fred",300);
        alice.setNext(Bob).setNext(charlie).setNext(diana).setNext(elmo).setNext(fred);
        for(int i=0;i<500;i+=33){
            alice.support(new Trouble(i));
        }
    }
}
