package com.cjj.designpattern.behavioral.chain;

/**
 * Created by chenjj on 2018/12/28
 */
public class SpecialSupport extends Support{
    private int number;
    public SpecialSupport(String name,int number){
        super(name);
        this.number=number;
    }

    @Override
    protected boolean resolve(Trouble trouble) {
        if(trouble.getNumber()==number){
            return true;
        }else {
            return false;
        }
    }
}
